removing the comment from the paint tool box

--- a/Hamburger.UI/Views/MapView.xaml
+++ b/Hamburger.UI/Views/MapView.xaml
@@ -26,6 +26,6 @@
                             ServiceUri="http://services.arcgisonline.com/arcgis/rest/services/World_Imagery/MapServer" />
             </esri:Scene>
         </esri:SceneView>
-        <!--<views:PaintToolBox View="{Binding ElementName=RooSceneView}"/>-->
+        <views:PaintToolBox View="{Binding ElementName=RooSceneView}"/>
     </Grid>
 </UserControl>
