--- a/Hamburger.UI/Views/MapView.xaml
+++ b/Hamburger.UI/Views/MapView.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<UserControl
     x:Class="Hamburger.UI.Views.MapView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -14,7 +14,7 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <esri:SceneView x:Name="RootSceneView"
+        <esri:SceneView x:Name="RooSceneView"
 					  LayerLoaded="OnRootSceneViewLayerLoaded">
             <esri:Scene>
                 <esri:Scene.Surface>
@@ -26,6 +26,6 @@
                             ServiceUri="http://services.arcgisonline.com/arcgis/rest/services/World_Imagery/MapServer" />
             </esri:Scene>
         </esri:SceneView>
-        <views:PaintToolBox View="{Binding ElementName=RootSceneView}"/>
+        <views:PaintToolBox View="{Binding ElementName=RooSceneView}"/>
     </Grid>
-</Page>
+</UserControl>
