adding toggle buttons

--- a/Hamburger.UI/MainPage.xaml
+++ b/Hamburger.UI/MainPage.xaml
@@ -75,18 +75,9 @@
                     <TextBlock FontWeight="Bold" FontSize="24" Margin="8,8,0,0">הגדרות</TextBlock>
                     <StackPanel  Margin="8,20,8,3">
                         <TextBlock FontWeight="Bold" FontSize="20" Margin="8,8,8,8">משהו</TextBlock>
-                        <StackPanel Orientation="Horizontal">
-                            <Button  FontSize="20" Margin="8,8,8,8">הגדרה 1</Button>
-
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <Button  FontSize="20" Margin="8,8,8,8">הגדרה 2</Button>
-
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <Button  FontSize="20" Margin="8,8,8,8">הגדרה 3</Button>
-
-                        </StackPanel>
+                        <ToggleButton  FontSize="20" Margin="8,8,8,8" >הגדרה 1</ToggleButton>
+                        <ToggleButton  FontSize="20" Margin="8,8,8,8">הגדרה 2</ToggleButton>
+                        <ToggleButton  FontSize="20" Margin="8,8,8,8">הגדרה 3</ToggleButton>
                     </StackPanel>
 
                     <StackPanel Margin="8,20,8,3">
