--- a/Hamburger.UI/MainPage.xaml
+++ b/Hamburger.UI/MainPage.xaml
@@ -116,38 +116,38 @@
                     <SplitView.Pane>
                         <StackPanel FlowDirection="RightToLeft" >
                             <TextBlock FontWeight="Bold" FontSize="24" Margin="8,8,0,0">דברים</TextBlock>
-                            <ScrollViewer HorizontalScrollBarVisibility="Hidden" Margin="0,20,0,0" Height="300">
+                            <ScrollViewer HorizontalScrollBarVisibility="Hidden" Margin="0,10,0,0" Height="300">
                                 <StackPanel>
-                                    <ListBox ItemsSource="{Binding Restraunts}">
-                                        <ListBox.ItemTemplate>
+                                    <ItemsControl ItemsSource="{Binding Restraunts}" Margin="8,10,0,0">
+                                        <ItemsControl.ItemTemplate>
                                             <DataTemplate>
-                                                <StackPanel Orientation="Horizontal">
+                                                <StackPanel Orientation="Horizontal" Margin="5,5,5,5">
                                                     <Button Width="120" Height="40" FontSize="20" Content="{Binding Name}"/>
                                                     <Button Height="40" FontFamily="Segoe MDL2 Assets"
                                                  FontSize="26" Content="&#xECCD;"/>
                                                 </StackPanel>
                                             </DataTemplate>
-                                        </ListBox.ItemTemplate>
-                                    </ListBox>
+                                        </ItemsControl.ItemTemplate>
+                                    </ItemsControl>
                                 </StackPanel>
                             </ScrollViewer>
 
                             <TextBlock FontWeight="Bold" FontSize="24" Margin="8,8,0,0">דברים אחרים</TextBlock>
 
-                            <ScrollViewer HorizontalScrollBarVisibility="Hidden" Margin="0,20,0,0" Height="300">
+                            <ScrollViewer HorizontalScrollBarVisibility="Hidden" Margin="0,10,0,0" Height="300">
                                 <StackPanel>
 
-                                    <ListBox ItemsSource="{Binding Bars}">
-                                        <ListBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <StackPanel Orientation="Horizontal">
+                                    <ItemsControl ItemsSource="{Binding Bars}" Margin="8,10,0,0">
+                                        <ItemsControl.ItemTemplate>
+                                            <DataTemplate >
+                                                <StackPanel Orientation="Horizontal" Margin="5,5,5,5">
                                                     <Button Width="120" Height="40" FontSize="20"  Content="{Binding Name}"/>
                                                     <Button Height="40" FontFamily="Segoe MDL2 Assets"
                                                  FontSize="26" Content="&#xECCD;"/>
                                                 </StackPanel>
                                             </DataTemplate>
-                                        </ListBox.ItemTemplate>
-                                    </ListBox>
+                                        </ItemsControl.ItemTemplate>
+                                    </ItemsControl>
                                 </StackPanel>
                             </ScrollViewer>
 
